[package]
name = "AntiBloatLight"
version = "1.0.4"
description = "An open source, lightweight alternative to SteelSeries GG for customising keyboard lighting colours."
repository = "https://github.com/ScepticDope/AntiBloatLight"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
hidapi = "2.6.3" # Check here for the latest version: https://crates.io/crates/hidapi
